--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -7,3 +7,10 @@
 /Bee1001_ExtremamenteBasico.class
 /Bee1002_AreaDoCirculo.class
 /Bee1003_SomaSimples.class
+/Bee1005_Media1.class
+/Bee1006_MEDIA2.class
+/Bee1007_Diferenca.class
+/Bee1008_Salario.class
+/Bee1006_Media2.class
+/Bee1009_SalarioComBonus.class
+/Bee1010_.class
