--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -14,3 +14,8 @@
 /Bee1006_Media2.class
 /Bee1009_SalarioComBonus.class
 /Bee1010_.class
+/Bee1010_CalculoSimples.class
+/Bee1011_Esfera.class
+/Bee1012_Area.class
+/Bee1013_OMaior.class
+/Bee1014_Consumo.class
