--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -21,3 +21,10 @@
 /Bee1014_Consumo.class
 /Bee1016_Distancia.class
 /Bee1017_GastoDeCombustivel.class
+/Bee1015_DistanciaEntreDoisPontos.class
+/Bee1019_ConversaoTempo.class
+/Bee1018_Cedulas.class
+/Bee2020_IdadeEmDias.class
+/Bee1021_IdadeEmDias.class
+/Bee1021_NotasEMoedas.class
+/Bee1061_TempoDeUmEvento.class
