--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,1 +1,6 @@
 /Bee1048_AumentoDeSalario.class
+/Bee1113_crescenteEDecrescente.class
+/Bee1114_SenhaFixa.class
+/Bee1150_Quadrante.class
+/Bee1117_ValidacaoDeNotas.class
+/Bee1134_TipoDeCombustivel.class
