--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -4,3 +4,5 @@
 /Bee1150_Quadrante.class
 /Bee1117_ValidacaoDeNotas.class
 /Bee1134_TipoDeCombustivel.class
+/Bee1154_Idades.class
+/Bee1159_SomaParesConsecutivos.class
