--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -7,3 +7,6 @@
 /Bee1154_Idades.class
 /Bee1159_SomaParesConsecutivos.class
 /Bee1078_Tabuada.class
+/Peca.class
+/teste.class
+/Bee1071_SomaDeImparesConsecutivosI.class
